[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets_3/boulder.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/Traps/Boulder.gd" type="Script" id=2]
[ext_resource path="res://assets_3/music/gravelwalk.ogg" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "rolling"
length = 2.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -180.0, -360.0 ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 61.6495

[sub_resource type="CircleShape2D" id=3]
radius = 68.8303

[node name="Boulder" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 9
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
rotation = -0.231817
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/rolling = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="boulder" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="boulder"]
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 2.00001, 0 )
scale = Vector2( 10.5, 10.3 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 9.52441, -11.9055 )
scale = Vector2( 1.95244, 2.19055 )
process_parent = true
physics_process_parent = true

[node name="rolling_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.145
[connection signal="body_entered" from="boulder" to="." method="_on_boulder_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
